--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ The Kavery Engineering College
           </div>
           <div class="card">
             <div class="box">
-              <img src="balaji.jpg" alt="" />
+              <img src="balaji.JPG" alt="" />
               <div class="text">Balaji</div>
               <p>BE - Computer science engineering, Interested in Web Designer</p>
             </div>
