--- a/index.html
+++ b/index.html
@@ -278,6 +278,8 @@ The Kavery Engineering College
                   type="number"
                   class="subject"
                   name="Number"
+                  minlength="8"
+                  maxlength ="12"
                   placeholder="Mobile Number"
                   required
                 />
