--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ The Kavery Engineering College
         }
       }).then(response => {
         status.innerHTML = "Thanks for your submission!";
-        status.style.color="lime";
+        status.style.color="#00FFF5";
         form.reset()
       }).catch(error => {
         status.innerHTML = "Oops! There was a problem submitting your form";
